fix: contrast ratio for seo

--- a/src/app.css
+++ b/src/app.css
@@ -7,9 +7,9 @@
 	/* colors */
 	--black: #171717;
 	--black-hover: #282828;
-	--blue: #007aff;
-	--blue2: #007aff40;
-	--blue3: #007aff1a;
+	--blue: #0071e9;
+	--blue2: #0071e940;
+	--blue3: #0071e91a;
 	--green: #34c759;
 	--green2: #34c75940;
 	--green3: #34c7591a;
